# MalDetect-code

./: README.md
MalDetect/: CMakeLists.txt  MalDetect.cpp  MalDetect.h  README.md
MalDetect/conf/: orf.conf
MalDetect/src/: hyperparameters.cpp  hyperparameters.h  onlinerf.h  traffic.cpp  traffic.h  values.h
MalwareTrafficDetection/: creation
MalwareTrafficDetection/Dataset/: CheckFieldType.py  CheckFieldType_ubuntu.py  CheckPysharkField.py  DownloadDataset.py  DownloadDataset_current.py  DownloadDataset_current_ubuntu.py  PcapDisassemble.py  PcapDisassemble_ubuntu.py  Select443_ubuntu.py  features_new  pyshark_attributes
MalwareTrafficDetection/FeatureEvaluate/: FeaturePlot.py  FeaturePlot_specific.py  __init__.py
MalwareTrafficDetection/FeatureExtract/: Label.py  Unit.py  Unit_ubuntu.py  __init__.py  checkFeatureType.py  checklogfilehead.py  feature_format  feature_type  features  unit revise
MalwareTrafficDetection/MachineLearning/: ML.py  ML_cross_validation.py  result.txt
PcapEditor/: CMakeLists.txt  PcapEditor.cpp  PcapEditor.h  README.md
PcapEditor/conf/: label.conf
